--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/vidbg.css">
     <title>Space X</title>
 </head>
 
@@ -44,7 +45,65 @@
 
     </header>
 
+    <section class="main">
+        <h1 class="title">
+            Falcon Heavy
+        </h1>
+        <p class="description">
+            The most powerful operational rocket in the world by a factor of two
+        </p>
 
+    </section>
+    <div class="video-bg"></div>
+
+    <section class="features">
+
+        <div class="left-col">
+            <h2 class="features-title">Falcon Heavy <br> Overview</h2>
+
+            <table class="table">
+                <tr>
+                    <td>HEIGHT</td>
+                    <td>70 m / <span class="text-grey">229.6 ft</span></td>
+                </tr>
+                <tr>
+                    <td>DIAMETER</td>
+                    <td>12.2 m / <span class="text-grey">39.9 ft</span></td>
+                </tr>
+                <tr>
+                    <td>MASS</td>
+                    <td>1,420,788 kg / <span class="text-grey">3,125,735 lb</span></td>
+                </tr>
+                <tr>
+                    <td>PAYLOAD TO LEO</td>
+                    <td>63,800 kg / <span class="text-grey">140,660 lb</span></td>
+                </tr>
+                <tr>
+                    <td>PAYLOAD TO GTO</td>
+                    <td>26,700 kg / <span class="text-grey">58,860 lb</span></td>
+                </tr>
+                <tr>
+                    <td>PAYLOAD TO MARS</td>
+                    <td>16,800 kg / <span class="text-grey">37,040 lb</span></td>
+                </tr>
+            </table>
+            <h2 class="features-title">UNMATCHED <br> PERFORMANCE</h2>
+            <p class="features-text">With more than 5 million pounds of thrust at liftoff, Falcon Heavy is the most capable rocket flying. By comparison, the liftoff thrust of the Falcon Heavy equals approximately eighteen 747 aircraft at full power. Falcon Heavy can lift the
+                equivalent of a fully loaded 737 jetliner—complete with passengers, luggage and fuel—to orbit.</p>
+
+        </div>
+        <div class="right-col">
+            <img src="image/rocket.png" alt="" class="rocket" data-rellax-speed="5">
+        </div>
+
+
+    </section>
+
+
+
+    <script src="js/rellax.min.js"></script>
+    <script src="js/vidbg.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
