--- a/index.html
+++ b/index.html
@@ -93,12 +93,24 @@
 
         </div>
         <div class="right-col">
-            <img src="image/rocket.png" alt="" class="rocket" data-rellax-speed="5">
+            <img src="image/rocket.png" alt="" class="rocket" data-rellax-speed="7">
         </div>
-
-
     </section>
 
+    <footer class="footer">
+        <img src="image/logo.svg" alt="Logo SpaceX" class="logo-footer">
+        <nav class="social-nav">
+            <a href="#" class="social-link">Twitter</a>
+            <a href="#" class="social-link">Youtube</a>
+            <a href="#" class="social-link">Instagram</a>
+            <a href="#" class="social-link">Flickr</a>
+            <a href="#" class="social-link">LinkedIn</a>
+            <a href="#" class="social-link">Privacy</a>
+            <a href="#" class="social-link">Policy</a>
+        </nav>
+        <p class="footer-text">For additional questions, contact rideshare@spacex.com</p>
+        <button class="contact">Contact us</button>
+    </footer>
 
 
     <script src="js/rellax.min.js"></script>
